--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-node@v1.3.0
         with:
           node-version: ${{ matrix.mpde }}
+      - name: pull request
+          if: github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true
       - name: Get NPM cache directory
         id: npm-cache
         run: |
