--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Backport
         uses: peter-evans/create-pull-request@v3
         with:
-          base: develop
-          branch: master
+          base: master
+          branch: develop
 
 
