--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -7,22 +7,19 @@ on:
 
 jobs:
   backport:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     name: Backport
     steps:
-      - uses: actions/checkout@v2
-#      - name: Backport
-#        uses: peter-evans/create-pull-request@v3
-#        with:
-#          token: ${{ secrets.GITHUB_TOKEN }}
-#          base: master
-#          branch: develop
-#          draft: true
-#            # プルリクを作成する
+      # hub コマンドをインストールする
+      - name: install hub
+        uses: geertvdc/setup-hub@v1.0.0
+      - name: checkout
+        uses: actions/checkout@v2
       - name: Create Pull Request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           hub pull-request -m "Github Actions からプルリクを出す" -b develop -h master
+          echo "branch name: ${github.event.pull_request.head.ref"
 
 
