--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -19,7 +19,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          hub pull-request -m "Github Actions からプルリクを出す" -b develop -h master
-          echo "branch name: ${github.event.pull_request.head.ref"
+          hub pull-request -m "Github Actions からプルリクを出す ${github.event.pull_request.head.ref}" -b develop -h master
 
 
