--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Create Pull Request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: ${github.event.pull_request.head.ref}
         run: |
-          hub pull-request -m "Github Actions からプルリクを出す ${github.event.pull_request.head.ref}" -b develop -h master
+          hub pull-request -m "Github Actions からプルリクを出す $BRANCH_NAME" -b develop -h master
 
 
