--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Create Pull Request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: ${github.event.pull_request.head.ref}
+          BRANCH_NAME: ${github.event.pull_request}
         run: |
           hub pull-request -m "Github Actions からプルリクを出す $BRANCH_NAME" -b develop -h master
 
