--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -16,8 +16,9 @@ jobs:
       - name: Create Pull Request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH_NAME: ${GITHUB_REF##*/}
+          GITHUB_REF: ${{ GITHUB_REF }}
+          GITHUB_BASE_REF: ${{ GITHUB_BASE_REF }}
         run: |
-          hub pull-request -m "Github Actions からプルリクを出す $BRANCH_NAME" -b develop -h master
+          hub pull-request -m "GITHUB_REF: $GITHUB_REF GITHUB_BASE_REF: $GITHUB_BASE_REF" -b develop -h master
 
 
