--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
     name: Backport
     steps:
-      # hub コマンドをインストールする
       - name: checkout
         uses: actions/checkout@v2
       - name: Create Pull Request
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH_NAME: ${{ github.event.pull_request.base.ref }}
         run: |
-          hub pull-request -m "GITHUB_REF: GITHUB_BASE_REF:" -b develop -h ${{ github.event.pull_request.base.ref }}
+          hub pull-request -m "GITHUB_REF: $BRANCH_NAME" -b develop -h $BRANCH_NAME
 
 
