--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -17,6 +17,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
+        with:
+          branch: BRANCH_NAME
+          base: develop
 #      - name: Create Pull Request
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
