--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -1,6 +1,7 @@
 name: Backport
 on:
   pull_request:
+    types: closed
     branches:
       - master
       - staging
@@ -17,7 +18,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: BRANCH_NAME
+          branch: ${{ BRANCH_NAME }}
           base: develop
 #      - name: Create Pull Request
 #        env:
