--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          BRANCH_NAME: staging
+          branch: staging
           base: develop
 #      - name: Create Pull Request
 #        env:
