--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -18,8 +18,8 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          branch: staging
-          base: develop
+          base: staging
+          branch: develop
 #      - name: Create Pull Request
 #        env:
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
