--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -18,10 +18,8 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          token: ${{ secrets.PAT }}
           commit-message: Update report
-          committer: GitHub <noreply@github.com>
-          author: ${{ github.actor }} <${{ github.actor }}@users.noreply.github.com>
+          committer: GitHub
           signoff: false
           title: '[Example] Update report'
           body: |
