--- a/.github/workflows/backport.yml
+++ b/.github/workflows/backport.yml
@@ -17,9 +17,9 @@ jobs:
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3
         with:
-          draft: true
+          base: ${{ github.head_ref }}
+          branch: develop
           commit-message: Update report
-          signoff: false
           title: '[Example] Update report'
           body: |
             Update report
